--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^3.0.7",
+    "bcryptjs": "^2.4.3",
     "config": "^1.29.4",
     "express": "^4.16.2",
     "express-async-errors": "^2.1.0",
@@ -18,9 +18,9 @@
     "joi": "^13.1.0",
     "joi-objectid": "^2.0.0",
     "jsonwebtoken": "^8.1.1",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.15",
     "moment": "^2.20.1",
-    "mongoose": "^5.0.2",
+    "mongoose": "^5.8.11",
     "winston": "^2.4.0",
     "winston-mongodb": "^3.0.0"
   },
