--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "config": "^1.29.4",
+    "cors": "^2.8.5",
     "express": "^4.16.2",
     "express-async-errors": "^2.1.0",
     "fawn": "^2.1.5",
+    "googleapis": "^47.0.0",
     "joi": "^13.1.0",
     "joi-objectid": "^2.0.0",
     "jsonwebtoken": "^8.1.1",
     "lodash": "^4.17.15",
     "moment": "^2.20.1",
     "mongoose": "^5.8.11",
+    "multer": "^1.4.2",
     "winston": "^2.4.0",
     "winston-mongodb": "^3.0.0"
   },
