--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express-async-errors": "^2.1.0",
     "express-fileupload": "^1.1.6",
     "fawn": "^2.1.5",
-    "googleapis": "^47.0.0",
+    "google-auth-library": "^5.9.2",
+    "googleapis": "^39.2.0",
     "joi": "^13.1.0",
     "joi-objectid": "^2.0.0",
     "jsonwebtoken": "^8.1.1",
