Add db env variable

--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "nodemon index.js"
+    "test": "nodemon index.js",
+    "start": "node index.js"
+  },
+  "engines": {
+    "node": "12.16.0"
   },
   "keywords": [],
   "author": "",
