--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vidly",
+  "name": "otrojjah",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -15,27 +15,27 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "config": "^1.29.4",
+    "config": "^1.31.0",
     "cors": "^2.8.5",
-    "express": "^4.16.2",
-    "express-async-errors": "^2.1.0",
+    "express": "^4.17.1",
+    "express-async-errors": "^2.1.2",
     "express-fileupload": "^1.1.6",
     "fawn": "^2.1.5",
-    "google-auth-library": "^5.9.2",
+    "google-auth-library": "^5.10.1",
     "googleapis": "^39.2.0",
-    "joi": "^13.1.0",
+    "joi": "^13.7.0",
     "joi-objectid": "^2.0.0",
-    "jsonwebtoken": "^8.1.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
-    "moment": "^2.20.1",
-    "mongoose": "^5.8.11",
+    "moment": "^2.24.0",
+    "mongoose": "^5.9.4",
     "multer": "^1.4.2",
     "random-int": "^2.0.1",
-    "winston": "^2.4.0",
-    "winston-mongodb": "^3.0.0"
+    "winston": "^2.4.4",
+    "winston-mongodb": "^3.0.2"
   },
   "devDependencies": {
-    "jest": "^22.2.2",
-    "supertest": "^3.0.0"
+    "jest": "^22.4.4",
+    "supertest": "^3.4.2"
   }
 }
