--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^4.6.0",
     "bcryptjs": "^2.4.3",
     "config": "^1.31.0",
     "cors": "^2.8.5",
