--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "preinstall": "node credentialsSetup.js",
     "test": "nodemon index.js",
     "start": "node index.js"
   },
