--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "nodemon index.js",
-    "start": "node index.js"
+    "start": "node index.js",
+    "postinstall" : "echo $GOOGLE_CREDENTIALS > $GOOGLE_APPLICATION_CREDENTIALS"
   },
   "engines": {
     "node": "12.16.0"
