--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "nodemon index.js",
     "start": "node index.js",
-    "postinstall" : "echo $GOOGLE_CREDENTIALS > $GOOGLE_APPLICATION_CREDENTIALS"
+    "postinstall" : "node credentialsSetup.js"
   },
   "engines": {
     "node": "12.16.0"
